# autoprintf

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  fa.cpp  flake.nix  sample.cpp
